# glanzshamzs

./: BuildingVTKforLinux.md  README.md  pushgit  rowmajor.c
BLAS/: BLAS1-copyvector.f90  BLAS1-dotproduct.f90  BLAS1-vectorscalarmultiplication.f90  Readme
Box2d/HelloWorld/: CMakeCache.txt  CMakeLists.txt  HelloWorld  HelloWorld.cpp  Makefile  cmake_install.cmake
Bullet/: Readme.md  hellobullet.cpp
CUDA/: Readme.md  cuda.h  has_cuda.c
Eigen/: creatematrix.cpp
Fortran77/: Readme  euclid.f
Fortran90/: Readme  circlearea.f90  coneformula.f90  cylinderarea.f90  cylinderformula.f90  sphereformulas.f90  summation.f90  sums.f90  trianglearea.f90  trigonometrysincos.f90
Fortran90/Calculus/: Ch1-1-pythagoras.f90
GLFW/: HelloWindow.cpp  HelloWindowGlad.cpp
Hamzstlab/: Readme.md
Icon/: geomview
Julia/: Readme.md  batman.jl  economicsplot1.jl  italyflag.jl  luxortest.jl  test.c  trigonometry.jl
KratosMultiphysics/: Readme.md  configure.sh  standard_configure.sh
LUDecomposition/: dgesv.c  dgesv.f90
LasthrimProjection/: Readme.md
Libraries/: Readme.md  make.inc
LinearAlgebra/: ch9-1-LUDecomposition.c  ch9-1-LUDecomposition.f90
LinearSystem/: solvinglinearsystemcomparing.c
Lucriflaw/: Readme.md
MPI/: Makefile  Readme.md  example.c  mpi_hello_world.c
Nagiconomy/: Readme.md
OpenCV/: cameracapture.cpp  image.c  showimage.py  test.py
OpenFOAM/: Readme.md  bashrc
OpenGL/: Makefile  Readme.md  freyatexture  textures.cpp  textures_combined.cpp  upsidedowntriangle.cpp
OpenMP/: Readme.md  test.c
ProjectChrono/: Makefile  Readme.md  demo.cpp  demo_IRR_crank.cpp  experimental.cpp  test.cpp
Python/: dotproduct.py  ipythondownload  tes.py  tes2.py
QRUpdate/: dbqru.f  dbqru_appq.f  dbqru_larf.f  dbqru_larfb.f  dbqru_larft.f  makefile  testdbqru.f  testdbqru.res  testzbqru.f  testzbqru.res  timdbqru.f  timzbqru.f  zaxpyc.f  zbqru.f  zbqru_appq.f  zbqru_larf.f  zbqru_larfb.f  zbqru_larft.f
Robotics/: Readme.md
Tokamak/: Readme.md  hello_tokamak.cpp
Trilinos/: Readme.md  libbuild4.txt  libbuildold.txt
Trilinos/Anasazi/example/: CMakeLists.txt  Readme.md
VTK/: BuildingVTK.md  Readme.md  vtkexample
WIAS/: Readme.md
Zerolif/: Readme.md
(+5970 files in other folders)
